--- a/flaskr/templates/views/index.html
+++ b/flaskr/templates/views/index.html
@@ -18,4 +18,49 @@
       <li><a href="{{ url_for('views.datakvalitet_kvalitetark') }}">Fullstendig kvalitetsuthenting</a></li>
     </ul>
   </div>
+  <hr>
+  <div>
+    <h1 style="text-align: center;">
+      Datakvalitet i NVDB
+    </h1>
+    <h2>
+      Kvalitetsparametere
+    </h2>
+    <h3>
+      Nivå 1
+    </h3>
+    <h4>
+      Vegobjekter
+    </h4>
+    <h4>
+      Egenskaper
+    </h4>
+    <h4>
+      Egengeometri
+    </h4>
+    <h4>
+      Stedfesting
+    </h4>
+    <h4>
+      Relasjoner
+    </h4>
+    <h3>
+      Nivå 2
+    </h3>
+    <h4>
+      Fullstendighet
+    </h4>
+    <h4>
+      Konsistens
+    </h4>
+    <h4>
+      Riktighet
+    </h4>
+    <h4>
+      Aktualitet
+    </h4>
+    <h4>
+      Nøyaktighet
+    </h4>
+  </div>
 {% endblock %}
