--- a/flaskr/templates/views/kvalitetark.html
+++ b/flaskr/templates/views/kvalitetark.html
@@ -260,6 +260,8 @@
       }
       };
 
+      område1 = område1 ? område1 : 'Alle';
+      console.log(område2)
       const diagram_data = {
       labels: labels,
       datasets: [{
