Uferdig ny struktur på henting av tabeller fra database

--- a/flaskr/templates/views/index.html
+++ b/flaskr/templates/views/index.html
@@ -24,26 +24,45 @@
       Datakvalitet i NVDB
     </h1>
     <h2>
-      Kvalitetsparametere
+      Kvalitetselementer
     </h2>
+    <section>
+      Vi har definert flere kvalitetselementer for å prøve å konkretisere hva datakvalitet i NVDB faktisk betyr. Disse kvalitetselementene består av to nivå. Nivå 1 angir hvilken del av vegobjektet kvalitetselementet ser på. Nivå 2 angir hvilken kvalitetsparameter som kvalitetselementet bruker.
+      Ett kvalitetselement er da en unik kombinasjon av nivå 1 og nivå 2.
+    </section>
     <h3>
       Nivå 1
     </h3>
     <h4>
       Vegobjekter
     </h4>
+    <section>
+      Kvalitetselementer som ser på vegobjekter som en helhet. 
+    </section>
     <h4>
       Egenskaper
     </h4>
+    <section>
+      Kvalitetselementer som ser spesifikt på egenskapsverdiene til vegobjektene.
+    </section>
     <h4>
       Egengeometri
     </h4>
+    <section>
+      Kvalitetselementer som ser spesifikt på egengeometrien til vegobjektene.
+    </section>
     <h4>
       Stedfesting
     </h4>
+    <section>
+      Kvalitetselementer som ser spesifikt på stedfestingen til vegobjektene.
+    </section>
     <h4>
       Relasjoner
     </h4>
+    <section>
+      Kvalitetselementer som ser spesifikt på relasjonene til vegobjektene.
+    </section>
     <h3>
       Nivå 2
     </h3>
