--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -226,3 +226,24 @@ html {
   .sammenlign-popup {
     display: none;
   }
+
+  .modal {
+    position: fixed; 
+    bottom: 0; 
+    left: 0; 
+    width: 100%; 
+    z-index: 1000;
+    display: none;
+    background-color: antiquewhite;
+  }
+
+  .modal-content {
+    margin: auto; 
+    width: 90%; 
+    max-width: 800px;
+  }
+
+  .close {
+    float: right; 
+    cursor: pointer;
+  }
